# serializer version: 1
# name: test_caluma_export_ag[Municipality]
  list([
    '2025-1',
    'Baugesuch',
    'Teststrasse 12, Aarburg',
    '1338',
    'Überbauung "Westfeld"',
    '05.02.2025',
    'In Zirkulation',
    'John Doe',
    'Johnston-Jennings',
    'blopez@example.com',
    'Aarburg',
    '01.01.2025',
    '30.01.2025',
    '08.05.2025',
  ])
# ---
# name: test_caluma_export_be[False-Leitbeh\xf6rde Burgdorf-Municipality-200-1-3]
  list([
    '2025-1',
    'Baugesuch',
    'Musterstrasse 4, 3000 Musterhausen',
    '2592, 473',
    '2599941, 2601995',
    '1198923, 1201340',
    'first pagesecond page',
    '31.03.2021',
    'In Zirkulation',
    'John Doe',
    'ACME AG',
    'test@example.com',
    'Bern',
    'Bern-Mittelland',
    'Bern-Mittelland',
    '',
    '01.01.2025',
    '30.01.2025',
    '08.05.2025',
    '',
    '',
    '',
    'Leitbehörde Burgdorf',
    '',
  ])
# ---
# name: test_caluma_export_be[False-Leitbeh\xf6rde Burgdorf-Service-200-1-3]
  list([
    '2025-1',
    'Baugesuch',
    'Musterstrasse 4, 3000 Musterhausen',
    '2592, 473',
    '2599941, 2601995',
    '1198923, 1201340',
    'first pagesecond page',
    '31.03.2021',
    'In Zirkulation',
    'John Doe',
    'ACME AG',
    'test@example.com',
    'Bern',
    'Bern-Mittelland',
    'Bern-Mittelland',
    '',
    '01.01.2025',
    '30.01.2025',
    '08.05.2025',
    '',
    '',
    '',
    'Leitbehörde Burgdorf',
    '',
  ])
# ---
# name: test_caluma_export_sz[False-Gemeinde Schwyz-Municipality-200-1-3]
  list([
    '123-45-77',
    'Test form',
    'Test location',
    'Smoothie-licious Inc., Red Apple',
    'Test "intent"',
    'Test location',
    'Test instance state',
    '',
    '02.03.2023',
    '',
    '',
    '',
    '01.04.2023',
    '03.04.2023',
  ])
# ---
# name: test_caluma_export_sz[False-Gemeinde Schwyz-Service-200-1-3]
  list([
    '123-45-77',
    'Test form',
    'Test location',
    'Smoothie-licious Inc., Red Apple',
    'Test "intent"',
    'Test location',
    'Test instance state',
    '',
    '02.03.2023',
    '',
    '',
    '',
    '01.04.2023',
    '03.04.2023',
  ])
# ---
# name: test_caluma_export_sz[True-Gemeinde Schwyz-Municipality-200-1-3]
  list([
    '123-45-77',
    'Test form',
    'Test location',
    'Smoothie-not-so-licious Inc., Red Apple',
    'Test intent override',
    'Test address, Test special name, Test location',
    'Test instance state',
    '',
    '02.03.2023',
    '',
    '',
    '',
    '01.04.2023',
    '03.04.2023',
  ])
# ---
# name: test_caluma_export_sz[True-Gemeinde Schwyz-Service-200-1-3]
  list([
    '123-45-77',
    'Test form',
    'Test location',
    'Smoothie-not-so-licious Inc., Red Apple',
    'Test intent override',
    'Test address, Test special name, Test location',
    'Test instance state',
    '',
    '02.03.2023',
    '',
    '',
    '',
    '01.04.2023',
    '03.04.2023',
  ])
# ---
